[package]
name = "boxcut"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
clap = "4.1.4"
clap_derive = "4.1.0"
env_logger = "0.10.0"
lazy_static = "1.4.0"
log = "0.4.17"
rust_decimal = "1.28.0"
svg = "0.13.0"
