[package]
name = "boxcut"
version = "0.0.3"
edition = "2021"
license-file = "LICENSE.md"
description = "CLI програмка для создания SVG дизайнов карторнных коробок для лазерного резака."
repository = "https://github.com/rustrum/boxcut"

[[bin]]
name = "boxcut"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.68"
clap = { version = "4.1.4", features = ["cargo"] }
clap_derive = "4.1.0"
env_logger = "0.10.0"
lazy_static = "1.4.0"
log = "0.4.17"
rust_decimal = "1.28.0"
svg = "0.13.0"
